tests/data/verify_output.txt
Traceback (most recent call last):
  File "/Users/studiotai/PyProject/msa/verify_invoice_multilang.py", line 98, in verify_invoice_multilang
    details_dialog = CustomerInvoiceDetailsDialog(mock_container, 1, mock_user)
  File "/Users/studiotai/PyProject/msa/src/app/views/invoice/customer_invoice_details_dialog.py", line 20, in __init__
    self._setup_ui()
    ~~~~~~~~~~~~~~^^
  File "/Users/studiotai/PyProject/msa/src/app/views/invoice/customer_invoice_details_dialog.py", line 70, in _setup_ui
    issue_label = QLabel(self.invoice.error_description)
TypeError: 'PySide6.QtWidgets.QLabel.__init__' called with wrong argument types:
  PySide6.QtWidgets.QLabel.__init__(MagicMock)
Supported signatures:
  PySide6.QtWidgets.QLabel.__init__(text: str, /, parent: PySide6.QtWidgets.QWidget | None = None, f: PySide6.QtCore.Qt.WindowType = Default(Qt.WindowFlags), *, textFormat: PySide6.QtCore.Qt.TextFormat | None = None, pixmap: PySide6.QtGui.QPixmap | None = None, scaledContents: bool | None = None, alignment: PySide6.QtCore.Qt.AlignmentFlag | None = None, wordWrap: bool | None = None, margin: int | None = None, indent: int | None = None, openExternalLinks: bool | None = None, textInteractionFlags: PySide6.QtCore.Qt.TextInteractionFlag | None = None, hasSelectedText: bool | None = None, selectedText: str | None = None)
  PySide6.QtWidgets.QLabel.__init__(parent: PySide6.QtWidgets.QWidget | None = None, f: PySide6.QtCore.Qt.WindowType = Default(Qt.WindowFlags), *, text: str | None = None, textFormat: PySide6.QtCore.Qt.TextFormat | None = None, pixmap: PySide6.QtGui.QPixmap | None = None, scaledContents: bool | None = None, alignment: PySide6.QtCore.Qt.AlignmentFlag | None = None, wordWrap: bool | None = None, margin: int | None = None, indent: int | None = None, openExternalLinks: bool | None = None, textInteractionFlags: PySide6.QtCore.Qt.TextInteractionFlag | None = None, hasSelectedText: bool | None = None, selectedText: str | None = None)
Verifying Invoice Multi-Language Support...

1. Testing LanguageManager...
Current Language: English
Invoices Title: Invoices
✅ LanguageManager loaded successfully

2. Testing CurrencyFormatter...
Formatted Price: $1,234.56
✅ CurrencyFormatter working

3. Testing View Instantiation...
Instantiating ModernInvoiceTab...
✅ ModernInvoiceTab instantiated
Instantiating CreateCustomerInvoiceDialog...
✅ CreateCustomerInvoiceDialog instantiated
Instantiating CustomerInvoiceDetailsDialog...
❌ Failed to instantiate views: 'PySide6.QtWidgets.QLabel.__init__' called with wrong argument types:
  PySide6.QtWidgets.QLabel.__init__(MagicMock)
Supported signatures:
  PySide6.QtWidgets.QLabel.__init__(text: str, /, parent: PySide6.QtWidgets.QWidget | None = None, f: PySide6.QtCore.Qt.WindowType = Default(Qt.WindowFlags), *, textFormat: PySide6.QtCore.Qt.TextFormat | None = None, pixmap: PySide6.QtGui.QPixmap | None = None, scaledContents: bool | None = None, alignment: PySide6.QtCore.Qt.AlignmentFlag | None = None, wordWrap: bool | None = None, margin: int | None = None, indent: int | None = None, openExternalLinks: bool | None = None, textInteractionFlags: PySide6.QtCore.Qt.TextInteractionFlag | None = None, hasSelectedText: bool | None = None, selectedText: str | None = None)
  PySide6.QtWidgets.QLabel.__init__(parent: PySide6.QtWidgets.QWidget | None = None, f: PySide6.QtCore.Qt.WindowType = Default(Qt.WindowFlags), *, text: str | None = None, textFormat: PySide6.QtCore.Qt.TextFormat | None = None, pixmap: PySide6.QtGui.QPixmap | None = None, scaledContents: bool | None = None, alignment: PySide6.QtCore.Qt.AlignmentFlag | None = None, wordWrap: bool | None = None, margin: int | None = None, indent: int | None = None, openExternalLinks: bool | None = None, textInteractionFlags: PySide6.QtCore.Qt.TextInteractionFlag | None = None, hasSelectedText: bool | None = None, selectedText: str | None = None)
